--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: go
 
 script:
-- build-release.sh
+- ./build-release.sh
 
 deploy:
   provider: releases
   api_key: $GITHUB_OAUTH_TOKEN
   file_glob: true
-  file: build/*
+  file: build/*.tar.gz
   skip_cleanup: true
   on:
     tags: true
